tests/compile_failure/src/Selftest/Compile.fail.cpp
int main()
{
    static_assert(false, "This file should not compile");
}
